# kanban-metrics

./: .gitignore  README.md  histogram.py  histogram_plotter.py  histogram_stub.py  main.py  pyproject.toml  requirements.txt  runner.py  test_main.py  test_runner.py
.github/workflows/: python-app.yml
data/: sample.csv
src/kanban_metrics/: argument_parser.py  command_line_argument_parser.py  histogram.py  histogram_plotter.py  runner.py
tests/: configurable_argument_parser.py  histogram_stub.py  test_runner.py
